--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.0.1",
     "roosterjs": "^7.10.0",
+    "roosterjs-editor-dom": "^7.15.1",
     "roosterjs-react": "0.0.72",
     "roosterjs-react-ribbon": "0.0.72",
     "vss-web-extension-sdk": "^5.141.0"
@@ -85,7 +86,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "typescript": "^3.8.3",
-    "uglifyjs-webpack-plugin": "^2.1.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
